@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-10T01:45:46Z",
+  "timestamp" : "2023-07-10T08:23:06Z",
   "count_outdated" : 818,
   "uniques_outdated" : 511,
-  "count" : 874,
-  "uniques" : 546,
+  "count" : 883,
+  "uniques" : 552,
   "clones" : [
     {
       "timestamp": "2023-06-26T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2023-07-10T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 9, 9 ],
+      "count_decinc": [ 0, 9 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ],
+      "uniques_decinc": [ 0, 6 ]
     }
   ]
 }
