@@ -1,6 +1,6 @@
 {
-  "count": 56,
-  "uniques": 18,
+  "count": 65,
+  "uniques": 21,
   "clones": [
     {
       "timestamp": "2023-06-26T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-07-09T00:00:00Z",
       "count": 5,
       "uniques": 3
+    },
+    {
+      "timestamp": "2023-07-10T00:00:00Z",
+      "count": 9,
+      "uniques": 6
     }
   ]
 }
