@@ -1,3 +1,12 @@
+2023-07-10T08:23:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5505772292 # 976
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
+* notice: last 14d: unq all: 21 65
+* notice: prev accum: outdated-unq outdated-all / unq all: 511 818 / 546 874
+* notice: next accum: outdated-unq outdated-all / unq all: 511 818 / 552 883
+* notice: prev exec diff / last date diff / accum: unq all: +6 +9 -0 -0 / +6 +9 -0 -0 / 6 9
+* notice: removed / changed dates: [] / [2023-07-10]
+
 2023-07-10T01:45:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5503137234 # 975
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-10
